Tested and modified offers, product apis
